--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Mynor Alexander",
   "devDependencies": {
     "gulp": "^3.8.6",
+    "gulp-concat": "^2.3.3",
     "gulp-util": "^2.2.20"
   }
 }
