--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "devDependencies": {
     "gulp": "^3.8.6",
     "gulp-browserify": "^0.5.0",
+    "gulp-compass": "^1.1.9",
     "gulp-concat": "^2.3.3",
     "gulp-util": "^2.2.20",
     "jquery": "^2.1.1",
