--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "gulp-browserify": "^0.5.0",
     "gulp-compass": "^1.1.9",
     "gulp-concat": "^2.3.3",
+    "gulp-if": "^1.2.2",
+    "gulp-uglify": "^0.3.1",
     "gulp-util": "^2.2.20",
     "jquery": "^2.1.1",
     "mustache": "^0.8.2"
