--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "gulp-compass": "^1.1.9",
     "gulp-concat": "^2.3.3",
     "gulp-if": "^1.2.2",
+    "gulp-minify-html": "^0.1.4",
     "gulp-uglify": "^0.3.1",
     "gulp-util": "^2.2.20",
     "jquery": "^2.1.1",
